StartLaunch is now working